--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "babel-plugin-macros": "^3.1.0",
     "ityped": "^1.0.3",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
